--- a/wp-content/themes/html5blank-stable/cohort.css
+++ b/wp-content/themes/html5blank-stable/cohort.css
@@ -9,374 +9,267 @@
 	font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
 }
-html, body{
-    margin:0;
-    padding:0;
-    font-size:62.5%;
-    width:100%;
-    height:100%;
-    background-color:#7a1501;
+html,body{
+    margin: 0;
+    padding: 0;
+    
 }
-
 body{
-    width:100%;
-    height: 100%;
-    text-align: center;
-    background-color:#7a1501;
-    font-family: sans-serif;
+    background-image: url(http://geekwiseacademy.com/img/owl-team.png);
+    background-repeat: no-repeat;
+    background-position: right top;
+    margin: 0;
+    padding: 0;
 }
-
-ul{
-    display: inline-block;
-    margin:0 auto;
-    list-style: none;
-    padding:0;
+.fa-bars{
+    visibility: hidden;
 }
-
-a{
-    display: inline-block;
-    text-decoration: none;
-}
-
-#index_label{
-    background-color:white;
-}
-
-header{
-    margin:0;
-    padding:0;
-    width:100%;
-    height: 5rem;
-    background-color:white;
-}
-
-header nav{
-    height: 100%;
-    width:100%;
-    margin:0 auto;
-    display:block;
-}
-
-/*  bars is input id */
-
-#bars{
-    display: none;
-}
-input{
-    display: none;
-}
-
-header nav ul{
-    width:55rem;
-    height:100%;
-}
-
-header nav ul li{
-    font-size: 1.3rem;
-    display:inline-block;
-    height:100%;
-    margin:0;
-    padding:0;
-    font-weight: 600;
-}
-
-header nav ul li:hover{
-    background-color:#F9DA0C;
-}
-
-header nav ul li:nth-child(1){
-    width:12%;
-}
-header nav ul li:nth-child(2){
-    width:14%;
-}
-header nav ul li:nth-child(3){
-    width:18%;
-}
-header nav ul li:nth-child(4){
-    width:13%;
-}
-
-/* sign up link needed to be added */
-
-header nav ul li:nth-child(5){
-    width:11%;
-    background-color:#F9DA0C;
-    font-size:1.2rem;
-}
-
-header nav ul li:nth-child(6){
-    width:10%;
-}
-
-header nav ul li:nth-child(7){
-    width:14%;
-}
-
-header nav ul li a{
-    color:black;
-    text-transform: uppercase;
-    height: 100%;
-    width:100%;
-}
-
-header nav ul li a span{
-    position: relative;
-    top:1.3rem;
-}
-
-#yellow{
-    color:#7A1501;
-    font-weight: 600;
-    font-size:1.3rem;
-}
-
-#navbar_hidden{
-    display: none;
-}
-
-/* start main section */
-
 main{
-    margin:0;
-    padding:0;
-    width:auto;
-    height: auto;
-    background-color:white;
+    margin: 20px; 
+    width: 95%;
+}
+nav{
+    
+    position: relative;
+    top:-100px;
 }
 
-main img{
-    width:auto;
-    margin-bottom: 5px;
+
+section{
+   margin: 0;
+padding: 0;
 }
-
-/* end of main section */
-
-/* start footer section */
-
-footer{
-    background-color:#7A1501;
-    display: block;
-    margin:0 auto;
+/* number list */
+ol{
+    
+    margin: 0 auto;
+    margin-left: 30px;
     text-align: center;
-    color:white;
-    height:auto;
-    padding-bottom: 5rem;
-}
-
-.fluff{
-    width:70%;
-    display:inline-block;
-    font-size:3rem;
-}
-
-@font-face {
-    font-family: 'franchise';
-    src: url('../fonts/franchise-bold-webfont.woff');
-}
-
-#h3_1{
-    text-transform: uppercase;
-    margin:0;
-    padding:0;
-    font-family:'franchise';
-    padding-top:3rem
-}
-
-@font-face {
-    font-family: 'ciria';
-    src: url('../fonts/ciria-bold.woff');
-}
-
-#h3_2{
-    margin:0;
-    padding:0;
-    font-family: 'ciria';
-}
-
-#divider{
-    width:60%;
+    clear:both;
     display: inline-block;
+    text-transform: capitalize;
+    
+}
+ol>li{
+    
+    font-weight:bold;
+    margin-left: 20px;
+    text-align: left;
+}
+#what{
+    color: black;
+    position: relative;
+    top:-10px;
+    font-weight: bold;
+    text-align: center;
+}
+p{
+    font-weight: bold;
+    margin-left: 50px;
+    text-align: left;
 }
 
-.links{
-    display: inline-block;
-    width:70%;
-    height:auto;
+/* geekwise logo */
+.geekwise{
+    position: relative;
+    top:-20px;
+    text-align: center;
+    color: white;
+    margin: 0;
+    padding: 20px;
 }
-
-/* this part targets the three icons images at the bottom */
-
-.links p:nth-child(1){
-    width:calc(99%/3);
-    float: left;
-    border-right: 1px solid white;
-    display:block;
-    margin:0 auto;
-    height:8rem;
-}
-.links p:nth-child(2){
-    width:calc(99%/3);
-    float: left;
-    border-right: 1px solid white;
-    display:block;
-    margin:0 auto;
-    height:8rem;
-}
-.links p:nth-child(3){
-    width:calc(99%/3);
-    float: right;
-    display:block;
-    margin:0 auto;
-    height:8rem;
-}
-
-.link_images{
-    display: block;
-    margin:0;
-}
-
-.link_images a{
-    width:auto;
-    color:white;
-}
-
-/* end of: this part targets the three icons images at the bottom */
-
-.link_images span{
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    margin:0;
-    padding:0;
-    display: inline-block;
-    height:1.5rem;
+/* cohort members */
+.cohorts{
     width:100%;
+    height: auto;
+    margin: 0;
+    padding: 0;
+    padding-bottom: 20px;
+    background-color: #7a1501;
+}
+h4{
+    padding: 20px;
+    margin: 0;
+    color: white;
+    font-size: 1.5em;
+    text-align: center;
+}
+h5{
+    margin: 20px;
+    padding: 10px;
+    font-size: 1em;        
+    background-color: #f9da0c;
+    
+}
+.black{
+    clear:inherit;
+  display: block;
+  width: 100%;
+  padding: 20px;
+  margin:0 auto;
+  background-color: #f9da0c;
+  cursor: pointer;
+    width: 80%;
 }
 
-/* start of media query, display nav bar as blocks and not inline */
+.red{
+    display: block;
+    
+    width: 80%;
+}
+.green{
+clear:inherit;
+  display: block;
+  width: 100%;
+  padding: 20px; 
+  margin:0 auto;
+  background-color: #f9da0c;
+  cursor: pointer;
+    margin-left: 0px;
+    display: block;
+    width: 80%;
+}
+/* checkbox hidden */
 
-@media only screen and (max-width:767px){
+#toggle{
+    display: block;
+    display: none;
     
+}
+#toggle2{
     
-header{
-    height: 30rem;
+    display: block;  
     display: none;
 }
-    
-    /* added label and input to create a menu icon making user friendly.  dropdown should appear when input checkbox (displayed as none) is checked */
-    
-    label{
-        display: block;
-        height: 12%;
-    }
-    
-    #bars{
-        display: inline-block;
-        width:6%;
-        float: right;
-        border:1px solid lightgrey;
-        opacity:.3;
-        margin:1.4rem 1.4rem 0 0;
-        border-radius:5px;
-    }
-    label > img:hover{
-        background-color:grey;
-    }
-    
-    input:checked + header{
-        display:block;
-    }
-    
-    /* made width to ul 100% so that each list item (menu item) will display as one on top of the other */
-    
-header nav ul{
-    width:100%;
+
+#toggle:checked~table{
+   display: block;
+   
 }
 
-header nav ul li{
-    display:inline-block; 
-    height:calc(100%/7);
+
+input[type=checkbox]:checked ~ table{
+    display: none;
+
+}
+.name{
+    font-size: 15px;
+    text-align: center;
+}
+table{
+    text-align: center;
+    widows: 50%;
+    background-color: white;
+    
+}
+.container{
+    width:100%;
+    padding: 30px;
+    background-color: #7a1501;
+    height: auto;
+}
+.photos_cohort{
+    margin: 30px;
+    text-align: center;
+    width: 100%;
+    
 }
 
-header nav ul li:nth-child(1){
-    width:100%;
-    height:4rem;
-    border-top:1px solid lightgrey;
-    
+.story{
+    font-size: 12px;
+    text-align:left;
 }
-header nav ul li:nth-child(2){
-    width:100%;
-    height:4rem;
+td{
+    width: calc(100%/5);
+    float: left;
 }
-header nav ul li:nth-child(3){
-    width:100%;
-    height:4rem;
-}
-header nav ul li:nth-child(4){
-    width:100%;
-    height:4rem;
-}
-header nav ul li:nth-child(5){
-    width:100%;
-    background-color:white;
-    height:4rem;
-}
-header nav ul li:nth-child(6){
-    width:100%;
-    height:4rem;
-}
-header nav ul li:nth-child(7){
-    width:100%;
-    height:4rem;
+/* fa-bars hidden*/
+fa{
+    float: right;
+    text-align: right;
+    visibility: hidden;
 }
 
-header nav ul li a{
-    margin:0;
-    padding:0;
-    height:100%;
-    width:20%;
-    font-weight: 600;    
+
+/* media */
+
+@media only screen and (max-width:600px) {
+  #menu_wrap {
+      position: relative;
+      bottom: 100px;
+      
+    }
+    .nav_list_item{
+        position: relative;
+        top:80px;
+    }
+   
+td{
+    width: 100%;
+`
 }
-    
-    header nav ul li a:hover{
-        background-color:#F9DA0C;
-    }
-    
-/* yellow is id for sign up link */
-    
-    #yellow{
-        display: inline-block;
-        height: 100%;
-        width: 20%;
-        background-color:#F9DA0C;
-    }
-    
-    header nav ul li span:hover{
-    background-color:#F9DA0C;
-}
-    header nav ul li:hover{
-    background-color:white;
-}
-    
-    main img{
-        width:100%;
-    }
-    
-/* adjusting link images and text below it to work for media query */    
-    
-    footer{
-        height: auto;   
-    }
-    
-.links{
-    width:100%;
 }
 
-    
-.link_images span{
-    font-size: 1.3rem;
-    width:100%;
+@media only screen and (max-width:900px) {
+    .fa{
+        visibility: visible;
+        color: gray;
+    }
+    .nav_list_item{
+        position: relative;
+        top:90px;
+    }
+    .photos_cohort{
+        width:80%;
+    }
+    td{
+    width: 100%;
+`
 }
 
+    ol>li{
+        visibility: visible;
+    }
+    #menu_wrap{
+        position: relative;
+        bottom: 100px;
+        
+    }
+
+@media only screen and (max-width:1000px){
+    .fa-bars{
+        visibility: visible;
+        color: gray;
+    }
+    body{
+        background-image: none;
+    }
+    
+   
+    h4{
+        margin-right: 50px;
+    }
+    table{
+        margin-right: 30px;
+    }
+    ul>li{
+        clear:inherit;
+    }
+
+    ol>li{
+        position: relative;
+        right: 10px;
+        top:10px;
+        font-size:14px;
+        visibility: visible;
+    }
+    .geekwise{
+    width:40%;
+    margin-left: 20px;
+    clear: inherit;
+    }
+    
+    
+    
     
 }
