--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -8,115 +8,227 @@
 	font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
 }
-html, body{
+html,body{
     margin: 0 auto;
-    padding:0;
-    font-size:67.5%;
+    height: 100vh;
+    padding: 0;
 }
-
 body{
-    
-    box-sizing: border-box;
-    margin:0;
-    width:100%;
-    height:100%;
-    background-color:white;
-    text-align:center;
-    font-family:sans-serif;
-    background-image:url(http://i.imgur.com/YZOVy0w.png);
+    margin: 0;
+    padding: 0;
+    background-image: url(http://i.imgur.com/YZOVy0w.png);
     background-position:top right;
-    background-repeat:no-repeat;
-    background-attachment:fixed;
-    margin:0;
-    padding:0;       
-
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
-
+main{
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    
+}
+header{
+    margin:0 auto;
+    padding-left: 200px;
+    background: #7a1501;
+}
 #header{
-    margin:0 auto;
-    width:100%;
-    height:15rem; 
-    float:left;
-    display:block;
-    background-color:#7a1501;
- 
-}
-
-#paragraph{
-    
-    display:block;
-    margin:0 auto;
-    font-size:13px;
-    width:75%
-    
-}
-
-.logo{
-    
-    display:block;
-    margin:1rem;
-    padding-left:25rem;
-    width:15rem;
-    height:5rem;
-    float:left;
-    transform:translateY(-7.3em);
-    
-    
-}
-#imag{
     
     margin:0 auto;
-    display:block;
-    text-align:left;  
-    transform:translateX(-8.5rem);
+    
+    
 }
-
 .nav{
-    
-    height:5rem;
-    display:block;
     margin:0 auto;
-    padding:.5em;
+    display:block;
     text-align:center;
-    line-height:3em;
-    transform:translateX(13em);
-  
 }
-
 ul{
-    list-style-type:none;
-    display:block;
-    margin:0 auto;
-    font-size:4rem;
+    
+    
+    display:inline-block;
     
 }
 
 li{
+    
+    display:inline;
+    font-size:1.2em;
+    
+}
+li a{
+    
+    color:#fff;
+    padding:.5em;
+    text-transform:uppercase;
+}
+.logo{
+    
+    transform:translateY(-3em);
+}
+#red{
+    background-color:#7a1501;
+}
+#pro{
+    
     margin:0 auto;
-    display:inline-block;
-    font-size:1.5rem;
-    padding:1em;
-    font-weight:600;
+    text-align:left;
+    
+    
+}
+h5{
+    text-align: left;
+}
+h3{
+    position: relative;
+    top:-17px;
+
+    color: black;
+    float: left;
+    font-size: 17px;
+    font-weight:bold;
+    clear: inherit;
+    text-transform:uppercase;
+}
+#signup{
+    color: #7a1501;
+}
+.work_nav{
+    padding: 0;
+    margin-left: 20px;
+    margin-top:-50px;
+}
+p{
+    text-align: left;
+}
+hr{
+    position: absolute;
+    
+}
+.about_nav{
+    position: relative;
+    top: -30px;
+    
+}
+
+/* head line */
+.fluff{
+    margin: 30px;
+    color: white;
+    position: relative;
+    left: -130px;
+}
+.head_wrap{
+    width: 150vh;
+    background-color: #7a1501;
+    margin:0;
+    
+    
+}
+.yellow> a {
+    color:#f9da0c;
+}
+
+.active{
+    
+    background-color: #f9da0c;
+
+}
+.active > a{
+    color:#7a1501;
+}
+.section{
+    
+    width:80%;
+    margin:0 auto;
+    
+    
 }
 
 a{
-    color:#ffffff;
-    text-decoration:none;
-    text-transform:uppercase;
+    text-decoration: none;
+    color: white;
 }
-
 a:hover{
-    color:#f9da0c;
-/*    background-color:#f9da0c;*/
-    transition:background 2s;
-    
+    background-color: #f9da0c;
 }
-.active>a{
-    color:#7a1501;
-    padding:1.3rem;
-    background-color:#f9da0c;
+#logo{
+    margin-left: 40px;
 }
+.text{
+   position: relative;
+    top:-50px;
+   margin: 100px;
+    width: 76%;
+}
+/* footer workshop page */
 
-.active_page a{
-    color:#f9da0c;
+footer{
+    position: absolute;
+    padding-left: 70px;
+    align-content: center;
+    left: 400px;
+    width:400px;
+    background-color:#f9da0c;
+    color:#7a1501;
+}
+/* media start*/
+@media only screen and (max-width:1000px){
+    #logo{
+        width: 40%;
+    }
+    body{
+       
+        background-image: none;
+    }
+    #logo{
+        width: 40%;
+        margin-left: 40px;
+        margin-top: 20px;
+    }
+
+    footer{
+        position: relative;
+        left: 50px;
+    
+    }
+    main{
+        width: 100vh;
+    }
+}
+@media only screen and (max-width:700px){
+    #logo{
+        width: 30%;
+    }
+    #geek{
+        margin-top:40px;
+        margin-left: 250px;
+        width: 20%;
+    }
+    main{
+        
+    }
+    .text{
+           position: relative;
+top: -0px;
+   margin: 50px;
+    width: auto;
+        
+    }
+    header{
+        width: 1005%;
+        padding: 0;
+        margin: 0;
+        margin-left: -200px;
+    }
+ li{
+margin: 0;
+    padding: 0;
+    text-align: center;
+    margin-left: -210px;
+    }
+   
+    footer{
+        margin-right:-100px;
+    }
 }
