--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -8,253 +8,389 @@
 	font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
 }
-html,body{
-    margin: 0 auto;
-    height: 100vh;
-    padding: 0;
-}
-body{
-    margin: 0;
-    padding: 0;
-    background-image: url(http://i.imgur.com/YZOVy0w.png);
-    background-position:top right;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-}
-main{
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    
-}
-header{
-    margin:0 auto;
-    padding-left: 200px;
-    background: #7a1501;
-}
-#header{
+html, body{
     
     margin:0 auto;
-    
-    
-}
-.nav{
-    margin:0 auto;
-    display:block;
-    text-align:center;
-}
-ul{
-    
-    
-    display:inline-block;
-    
+    padding:0;
+    font-size:67.5%;
 }
 
-li{
+body{
     
-    display:inline;
-    font-size:1.2em;
-    
-}
-li a{
-    
-    color:#fff;
-    padding:.5em;
-    text-transform:uppercase;
-}
-.text{
-    
-    text-align:left;
-    margin:0 auto;
-    display:block;
-    
-}
-hr{
-    
+    box-sizing:border-box;
+    margin:0;
     width:100%;
-    transform:translateY(.5em);
+    height:100%;
+    background-color:white;
+    text-align:center;
+    font-family:sans-serif;
 }
-h5{
-    display:block;
-    text-align:left;
+
+header{
     
+    margin:0 auto;
+    width:100%;
+    height:15rem;  
+    display:block;
+    background-color:#7a1501;
+ 
 }
+
 
 .logo{
     
-    transform:translateY(-3em);
+    display:block;
+    margin:1rem;
+    padding-left:25rem;
+    width:15rem;
+    height:5rem;
+    float:left;
+    transform:translateX(-11em);
+    
 }
-#red{
-    background-color:#7a1501;
+
+.parent{
+    
+    border-color:#f9da0c;
+    display:flex;
+    justify-content:space-between;
+    width:97em;
 }
-#pro{
+.nav{
     
     margin:0 auto;
     display:block;
-    font-size:14px;
-    width:100%;
-    text-align:left;
+    width:60%;
+    transform:translateX(18em);
     
     
-    
 }
-h5{
-    text-align: left;
+.logo{
+    transform:translateY(-4em);
 }
-h3{
-    position: relative;
-    top:-17px;
-    color: black;
-    float: left;
-    font-size: 17px;
-    font-weight:bold;
-    clear: inherit;
-    text-transform:uppercase;
-}
-#signup{
-    color: #7a1501;
-}
-.work_nav{
-    padding: 0;
-    margin-left: 20px;
-    margin-top:-50px;
-}
-p{
-    
+em{
+    display:block;
     margin:0 auto;
-    text-align:left;
-    
-}
-hr{
-    position:absolute;
-    width:78%;
-    
-}
-.about_nav{
-    position: relative;
-    top: -30px;
-    
-}
-
-/* head line */
-.fluff{
-    margin: 30px;
-    color: white;
-    position: relative;
-    left: -130px;
-    
-}
-.head_wrap{
-    width: 150vh;
-    background-color: #7a1501;
-    margin:0;
+    transform:translateX(-14em);
     
     
 }
-.yellow> a {
+ul{
+    
+    display:block;
+    margin:0 auto;
+    
+    
+    
+    
+}
+li{
+    padding-top:1em;
+    display:inline-block;
+}
+li a{
+    color:#fff;
+    text-transform:uppercase;
+    font-size:16px;
+    font-weight:700;
+    padding:1em;
+    text-decoration:none;
+    
+}
+li a:hover{
     color:#f9da0c;
 }
 
-.active{
+.item{
     
-    background-color: #f9da0c;
+    line-height:4.5rem;
 
 }
-.active > a{
-    color:#7a1501;
-}
-.section{
-    
-    width:80%;
-    margin:0 auto;
-    
-    
-}
-
-a{
-    text-decoration: none;
-    color: white;
-}
-a:hover{
-    background-color: #f9da0c;
-}
-#logo{
-    margin-left: 40px;
-}
-.text{
-    position relative;
-    top:-50px;
-    margin:0 auto;
-    width: 76%;
-}
-/* footer workshop page */
-
-footer{
-    position: absolute;
-    padding-left: 70px;
-    align-content: center;
-    left: 400px;
-    width:400px;
+.sign{
     background-color:#f9da0c;
+}
+
+.item a{
+    
+    color:#fff;
+    text-decoration:none;
+    font-size:1.4rem;
+    font-weight:600;
+    text-transform:uppercase;
+    
+}
+
+.item a:hover{
+    
+    color:#f9da0c;
+    
+}
+.active_page a {
+    
+    color:#f9da0c;
+}
+
+.sign a{
+    color:#7a1501;
+    background-color:#f9da0c;
+}
+.sign a:hover{
     color:#7a1501;
 }
-/* media start*/
-@media only screen and (max-width:1000px){
-    #logo{
-        width: 40%;
-    }
-    body{
-       
-        background-image: none;
-    }
-    #logo{
-        width: 40%;
-        margin-left: 40px;
-        margin-top: 20px;
-    }
 
-    footer{
-        position: relative;
-        left: 50px;
+
+span p{
     
+    margin:0 auto;
+    width:83rem;
+    height:3rem;
+    padding-right:2rem;
+    font-size: 1.5rem;
+    color:white;
+    text-transform:uppercase;
+    float:left;
+    transform:translateY(5rem);
+}
+
+p > em{
+    
+    float:right;
+}
+
+/*HEADER ENDS HERE*/
+
+/*RESOLVE ISSUE WITH WIDTH, main text was at 100% reduced to 72%*/
+
+main{
+    
+    width:72%;
+    height:100%;
+    display:block;
+    margin:0 auto;
+    
+}
+.first{
+    
+    display:block;
+    margin:0 auto;
+    height: auto;
+    
+}
+p{
+    
+    font-size:1.2rem;
+    float:left;
+    text-align:left;
+
+}
+
+h2{
+    
+    width:100%;
+    text-align:left;
+    text-transform:uppercase;
+    font-size:1.4rem;
+    border-bottom:solid .03rem;
+}
+#second{
+    
+    display:block;
+    margin:0 auto;
+    height:auto;
+    
+}
+#h2{
+    
+    width:100%;
+    text-align:left;
+    text-transform:uppercase;
+    font-size:1.4rem;
+    border-bottom:solid .03rem;  
+}
+p{
+    width:100%;
+    text-align:left;
+}
+
+b{
+    font-size:1.2rem;
+    float:left;
+    text-align:left;
+}
+#third{
+    
+    width:auto;
+    height:52rem;
+    
+}
+#last{
+    
+    float:left;
+    width:100%;
+    height:auto;
+    border-bottom:solid .03rem;
+    text-align:left;
+    text-transform:uppercase;
+    font-size:1.4rem;
+    border-bottom:solid .03rem;   
+}
+b{
+    
+    font-size:1.2rem;
+    float:left;
+    text-align:left;
+    
+}
+.button a{
+    
+    color:black;
+    margin:0 auto;
+    width:20%;
+    padding:1rem;
+    text-transform:uppercase;
+    font-size:1.8em;
+    background-color:yellow;
+    
+}
+
+.button:hover{
+    
+    color:white;
+    
+}
+
+.fa{
+    
+    float:right;
+    width:3rem;
+    height:4rem;
+    visibility:hidden;
+}
+
+.fa-bars{
+    
+    width:3rem;
+    height:3rem;
+    
+}
+
+.list{
+    
+    float:right;
+    text-align:right;
+    visibility:hidden;
+}
+footer{
+    
+    margin:0 auto;
+    width:25%;
+    height:50%;
+    font-size:2rem;
+    background-color:yellow;
+    transform:translateY(1em);
+}
+
+h3{
+    color:black;
+    margin:0 auto;
+    height:3em;
+    text-transform:uppercase
+}
+h3:hover{
+    color:black;
+}
+
+/*OWL LOGO IMAGE HERE*/
+
+
+#owl img{
+    float:right;
+    position:relative;
+
+}
+
+
+/*COMMENCE MEDIA HERE*/
+
+
+@media only screen and (max-width:1021px){
+    .parent{
+        margin-left:300px;
+        
     }
-    main{
-        width: 100vh;
+    checkbox{
+        
+    }
+    #bars{
+        visibility:hidden;
     }
 }
-@media only screen and (max-width:700px){
-    #logo{
-        width: 30%;
+@media only screen and (max-width:900px){
+    .parent{
+        display:none;
     }
-    #geek{
-        margin-top:40px;
-        margin-left: 250px;
-        width: 20%;
+    .logo{
+        visibility:hidden;
     }
-    main{
+    .fa{
+        width:12rem;
+        height: 5rem;
+        visibility:visible;
+        color:gray;
+    }
+  
+    .list{
+    width:200px;
+    height:auto;
+    font-size:28px;
+    border: lightgrey solid .1rem;
+    border-radius:.5rem;
+    padding-left:10px;
+    padding-right:10px;
+    
         
     }
-    .text{
-           position: relative;
-top: -0px;
-   margin: 50px;
-    width: auto;
+    nav{
+        display:none;
+    }
+    topbar{
+        display:none;
+    }
+    
+    #bars{
+        display:none;
+    }
+    
+    #bars:checked~#topbar{
+    display:block;
+    visibility:visible;
+   
+}
+    #ch{
         
-    }
-    header{
-        width: 1005%;
-        padding: 0;
-        margin: 0;
-        margin-left: -200px;
-    }
- li{
-margin: 0;
-    padding: 0;
-    text-align: center;
-    margin-left: -210px;
+        display:none;
     }
    
-    footer{
-        margin-right:-100px;
+    li{
+        text-align:left;
+        width:100px;
+        color:black;
+        
     }
+    nav{
+        
+        visibility:hidden;
+    }
+
+    .lines{
+        margin-left:250px;
+    }
+
+#owl{
+    margin:0 auto;
+    display:block;
+    float:right;
+    
+}
+    
 }
