--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -249,7 +249,7 @@ b{
     padding:1rem;
     text-transform:uppercase;
     font-size:1.8em;
-    background-color:yellow;
+    background-color:#f9da0c;
     
 }
 
@@ -283,10 +283,11 @@ b{
 footer{
     
     margin:0 auto;
-    width:25%;
+    width:35%;
     height:50%;
-    font-size:2rem;
-    background-color:yellow;
+    line-height:1em;
+    font-size:19px;
+    background-color:#f9da0c;
     transform:translateY(1em);
 }
 
