--- a/wp-content/themes/html5blank-stable/style.css
+++ b/wp-content/themes/html5blank-stable/style.css
@@ -7,6 +7,171 @@
 	font-smoothing:antialiased;
 	text-rendering:optimizeLegibility;
 }
+/*html,body{*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+    
+/*}*/
+
+/*HOME PAGE BODY IS HERE*/
+
+/*body{*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*}*/
+/*.fa{*/
+/*    visibility:hidden;*/
+/*}*/
+
+/*BELOW HEADER HAS AN ID="STAY"*/
+
+/*BELOW NAV HAS AN ID="topbar"*/
+
+/*header{*/
+/*    display:block;*/
+/*    padding:0;*/
+    
+/*}*/
+/*.nav{*/
+    
+/*    display:block;*/
+/*    margin:0 auto;*/
+/*    float:right;*/
+/*    transform:translateX(-22em);*/
+    
+/*}*/
+/*#bars{*/
+    
+/*    display:none;*/
+    
+/*}*/
+
+/*#topbar{*/
+/*    display:flex;*/
+/*    justify-content:center;*/
+
+/*}*/
+
+/*UL IS DISPLAYED BLOCK */
+
+/*ul{*/
+/*    display:block;*/
+/*    list-style:none;*/
+/*    line-height:1rem;*/
+/*}*/
+
+/*LI DISPLAY INLINE-BLOCK MAKES LIST INDIVIDUALLY BOXED IN A HORIZONTAL LINE*/
+
+/*li{*/
+/*    padding:1rem;*/
+/*    display:inline-block;*/
+/*    float:left;*/
+/*    font-size:.8rem;*/
+/*    font-weight:600;*/
+/*    text-transform:uppercase;*/
+/*    transform:translateY(-1.3em);*/
+/*}*/
+/*li:hover{*/
+/*    color:#7a1501;*/
+/*    background-color:#f9da0c;*/
+/*}*/
+
+/*ACTIVE CLASS REFERS TO THE SIGN UP BUTTON*/
+
+/*.active{*/
+    
+/*    background-color:#f9da0c;*/
+
+/*}*/
+
+/*.active > a{*/
+/*    color:#7a1501;*/
+/*}*/
+
+/*a{*/
+/*    text-decoration:none;*/
+/*    color:black;*/
+/*}*/
+
+/*BELOW WILL MAKE YOUR ANCHOR TAG HOVER RED*/
+
+/*a:hover{*/
+/*    display:block;*/
+/*    color:#7a1501;*/
+/*}*/
+
+/*.geekwise{*/
+/*    margin:0 auto;*/
+/*    display:block;*/
+/*    text-align:center;*/
+/*    transform:translateY(2.5em);*/
+    
+/*}*/
+
+/*.vertical-divider{*/
+/*    color:#fff;*/
+/*}*/
+
+/*h2{*/
+/*    position:relative;*/
+/*    top:30px;*/
+/*    font-family:"franchise";*/
+/*    font-size: 2.0em;*/
+/*    text-align:center;*/
+/*    margin:40px auto 0px auto;*/
+/*    color:white;*/
+/*    text-transform:uppercase;*/
+/*}*/
+
+/*h3{*/
+/*    position:relative;*/
+/*    top:30px;*/
+/*    font-family:"ciria";*/
+/*    font-size:2.0em;*/
+/*    font-weight:100;*/
+/*    text-align:center;*/
+/*    padding-bottom:1em;*/
+/*    margin:0 auto;*/
+/*    width:59%;*/
+/*    border-bottom: solid white .5px; */
+/*    color:white;*/
+/*    text-transform:lowercase;*/
+/*}*/
+
+
+/*THIS IS WHERE THE HEADER ENDS AND MAROONISH COLOR BEGINS AT BOTTOM*/
+
+/*.bottom{*/
+/*    height:400px;*/
+/*    background-color:#7A1501; */
+/*}*/
+/*.wp-image-181{*/
+/*     border-right:solid white .5px;*/
+/*     padding-right:7em;*/
+/*}*/
+/*.wp-image-182{*/
+/*    padding:3em;*/
+/*    transform:translateY(-3.3em);*/
+/*}*/
+/*.wp-image-180{*/
+    
+    
+/*    border-left:solid white .5px;*/
+/*    padding-left:9em;*/
+    
+    
+/*}*/
+
+/*.info-box{*/
+/*    position:relative;*/
+/*    top:30px;*/
+/*    display:block;*/
+/*    color:white;*/
+/*    float:left;*/
+/*    text-transform:uppercase;*/
+/*    transform:translateX(10em);*/
+/*    width:calc(55%/3);*/
+/*}*/
 html,body{
     margin: 0;
     padding: 0;
@@ -30,20 +195,7 @@ body{
 header{
     display:block;
     padding:0;
-    
-}
-.nav{
-    
-    display:block;
-    margin:0 auto;
-    float:right;
-    transform:translateX(-22em);
-    
-}
-#bars{
-    
-    display:none;
-    
+    height:25.3rem;
 }
 
 #topbar{
@@ -100,16 +252,9 @@ a:hover{
     color:#7a1501;
 }
 
-.geekwise{
+#geekwise{
     margin:0 auto;
-    display:block;
-    text-align:center;
-    transform:translateY(2.5em);
     
-}
-
-.vertical-divider{
-    color:#fff;
 }
 
 h2{
@@ -130,11 +275,10 @@ h3{
     font-size:2.0em;
     font-weight:100;
     text-align:center;
-    padding-bottom:1em;
     margin:0 auto;
     width:59%;
-    border-bottom: solid white .5px; 
     color:white;
+    font-weight:thin;
     text-transform:lowercase;
 }
 
@@ -145,31 +289,102 @@ h3{
     height:400px;
     background-color:#7A1501; 
 }
-.wp-image-181{
-     border-right:solid white .5px;
-     padding-right:7em;
-}
-.wp-image-182{
-    padding:3em;
-    transform:translateY(-3.3em);
-}
-.wp-image-180{
-    
-    
-    border-left:solid white .5px;
-    padding-left:9em;
-    
-    
-}
 
-.info-box{
+.icons{
     position:relative;
-    top:30px;
+    top:50px;
     display:block;
     color:white;
     float:left;
     text-transform:uppercase;
-    transform:translateX(10em);
-    width:calc(55%/3);
+    text-align:center;
+    width:calc(100%/3);
+}
+
+.center{
+    width:23rem;
+    border-right:solid white .03rem;
+    border-left:solid white .03rem;
+}
+
+#bars{
+    display:none;
+    float:right;
+}
+topbar{
+    height:auto;
+    display:inline;
+    float:right;
+    
+    
+}
+.fa{
+    
+    float:right;
+    display:block;
+    
+}
+.list{
+    
+    float:right;
+    text-align:right;
+    display:block;
+}
+
+span>img{
+    
+    margin:0 auto;
+    display:block;
+    
+}
+
+/*COMMENCE MEDIA*/
+
+@media only screen and (max-width:1021px){
+    
+    {
+        margin-left:300px;
+    }
+}
+@media only screen and (max-width:900px){
+    .fa{
+        visibility: visible;
+        color: gray;
+    }
+   
+    li{
+        text-align:left;
+        width: 100px;
+        color: black;
+    }
+    nav{
+        
+        visibility:visible;
+    }
+
+    
+}
+@media only screen and (max-width:600px){
+    .lines{
+        margin-left:170px;
+    }
+}
+@media only screen and (max-width:480px){
+    img{
+        width:100%;
+        height: auto;
+    }
+    
+    .icons{
+        margin-left: 70px;
+        width: 10%;
+        height: auto;
+        
+    }
+    li{
+      visibility:hidden;
+      text-align: right;
+    
+    }
 }
 
