--- a/wp-content/themes/html5blank-stable/workshops.css
+++ b/wp-content/themes/html5blank-stable/workshops.css
@@ -241,16 +241,28 @@ b{
     text-align:left;
     
 }
-.button a{
+/*.button a{*/
     
-    color:black;
-    margin:0 auto;
-    width:20%;
-    padding:1rem;
-    text-transform:uppercase;
-    font-size:1.8em;
+/*    color:black;*/
+/*    margin:0 auto;*/
+/*    width:20%;*/
+/*    padding:1rem;*/
+/*    text-transform:uppercase;*/
+/*    font-size:1.8em;*/
+/*    background-color:#f9da0c;*/
+    
+/*}*/
+#menu-item-162 a{
+    color:#7a1501;
+}
+#menu-item-162{
+    
     background-color:#f9da0c;
+    height:6em;
     
+}
+#menu-item-164 a{
+    color:#f9da0c;
 }
 
 .button:hover{
