--- a/wp-content/themes/html5blank-stable/team.css
+++ b/wp-content/themes/html5blank-stable/team.css
@@ -11,10 +11,13 @@
 html, body{
     margin: 0 auto;
     padding:0;
-    font-size:67.5%;
+    
 }
 
 body{
+    
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     margin:0;
     width:100%;
@@ -22,17 +25,21 @@ body{
     background-color:#7a1501;
     text-align:center;
     font-family:sans-serif;
+    background-image: url(http://geekwiseacademy.com/img/owl-team.png);
+    background-repeat: no-repeat;
+    background-position: right top;
+    
+    
 }
 
-header{
+/*header{*/
     
-    width:100%;
-    height:24rem;  
-    display:block;
-    transform:translateY(-.6rem);
-    background-color:white;
+/*    width:100%;*/
+/*    display:block;*/
+/*    transform:translateY(-.6rem);*/
+/*    background-color:white;*/
  
-}
+/*}*/
 h3{
     margin:0 auto;
     display:block;
@@ -46,17 +53,23 @@ h3{
 span>img{
     
     float:right;
-    transform:translateY(-7.53em);
-   
-    
+    transform:translateY(7.53em);
+  
 }
 
 .nav{
     
-    background-color:#fff;
+    display:block;
     margin:0 auto;
-    width:80%;
-    text-align:right;
+    position: relative;
+    text-align:center;
+    background-color:#fff;
+    width:60%;
+    height:6em;
+    /*margin:0 auto;*/
+    /*display:block;*/
+    /*width:80%;*/
+    /*text-align:right;*/
 }
 .team-member-icon{
     
@@ -68,9 +81,10 @@ span>img{
 
 ul{
     
-    width:70%;
+    /*width:100%;*/
     display:block;
     transform:translateX(16.5%);
+    text-align:left;
 
 }
 
@@ -78,8 +92,9 @@ li{
     
     margin:0 auto;
     display:inline-block;
-    font-size:2rem;
+    /*width:100%;*/
     padding:.8%;
+    text-align:center;
         
 }
 
@@ -88,7 +103,7 @@ a{
     color:black;
     line-height:3.5rem;
     text-decoration:none;
-    font-size:.8em;
+    font-size:1.1em;
     font-weight:600;
     text-transform:uppercase;
     
